--- a/notebooks/new_un.ipynb
+++ b/notebooks/new_un.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8024b001",
+   "id": "ec6ea612",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a140c9f0",
+   "id": "e0d7cb81",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9861d2c7",
+   "id": "3d7ea6a6",
    "metadata": {},
    "source": [
     "Using the pandas read_csv() method, read the GDP dataset into your notebook as a DataFrame called gdp_df. Take a look at the first few and last few rows to familiarize yourself with what is contained in this dataset."
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e934a79e",
+   "id": "f9c74c02",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e6b01f7",
+   "id": "a57806df",
    "metadata": {},
    "source": [
     "How many rows and columns are in gdp_df? What are the data types of each column?"
@@ -215,8 +215,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "f1ae7b53",
+   "execution_count": 32,
+   "id": "f061f878",
    "metadata": {},
    "outputs": [
     {
@@ -228,9 +228,9 @@
       "Data columns (total 4 columns):\n",
       " #   Column           Non-Null Count  Dtype  \n",
       "---  ------           --------------  -----  \n",
-      " 0   Country or Area  7662 non-null   object \n",
+      " 0   Country          7662 non-null   object \n",
       " 1   Year             7662 non-null   int64  \n",
-      " 2   Value            7662 non-null   float64\n",
+      " 2   GDP_Per_Capita   7662 non-null   float64\n",
       " 3   Value Footnotes  0 non-null      float64\n",
       "dtypes: float64(2), int64(1), object(1)\n",
       "memory usage: 239.6+ KB\n",
@@ -239,9 +239,9 @@
       "Data columns (total 4 columns):\n",
       " #   Column           Non-Null Count  Dtype  \n",
       "---  ------           --------------  -----  \n",
-      " 0   Country or Area  7662 non-null   object \n",
+      " 0   Country          7662 non-null   object \n",
       " 1   Year             7662 non-null   int64  \n",
-      " 2   Value            7662 non-null   float64\n",
+      " 2   GDP_Per_Capita   7662 non-null   float64\n",
       " 3   Value Footnotes  0 non-null      float64\n",
       "dtypes: float64(2), int64(1), object(1)\n",
       "memory usage: 239.6+ KB\n",
@@ -256,16 +256,155 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38188077",
+   "id": "16b7dcc1",
    "metadata": {},
    "source": [
-    "Drop the Value Footnotes column and rename the remaining three to 'Country', 'Year', and 'GDP_Per_Capita'.\n"
+    "Drop the Value Footnotes column and rename the remaining three to 'Country', 'Year', and 'GDP_Per_Capita'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "223c1530",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>GDP_Per_Capita</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1517.016266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>1968.341002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2079.921861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>2060.698973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2096.093111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7657</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>2670.106615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7658</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>2458.783255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7659</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>2468.278257</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7660</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>2781.787843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7661</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>2704.757299</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7662 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Country  Year  GDP_Per_Capita\n",
+       "0     Afghanistan  2021     1517.016266\n",
+       "1     Afghanistan  2020     1968.341002\n",
+       "2     Afghanistan  2019     2079.921861\n",
+       "3     Afghanistan  2018     2060.698973\n",
+       "4     Afghanistan  2017     2096.093111\n",
+       "...           ...   ...             ...\n",
+       "7657     Zimbabwe  1994     2670.106615\n",
+       "7658     Zimbabwe  1993     2458.783255\n",
+       "7659     Zimbabwe  1992     2468.278257\n",
+       "7660     Zimbabwe  1991     2781.787843\n",
+       "7661     Zimbabwe  1990     2704.757299\n",
+       "\n",
+       "[7662 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.drop(['Value Footnotes'], axis =1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8a7ddff",
+   "metadata": {},
+   "source": [
+    "How many countries have data for all years? Which countries are missing many years of data? Look at the number of observations per year. What do you notice?\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0a74584",
+   "id": "31fc2506",
    "metadata": {},
    "outputs": [],
    "source": []
