--- a/notebooks/new_un.ipynb
+++ b/notebooks/new_un.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fd3974b6",
+   "id": "b53e7eae",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "24000ebd",
+   "id": "71383ef0",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ae7c819",
+   "id": "0a88d336",
    "metadata": {},
    "source": [
     "Using the pandas read_csv() method, read the GDP dataset into your notebook as a DataFrame called gdp_df. Take a look at the first few and last few rows to familiarize yourself with what is contained in this dataset."
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0ff01fe4",
+   "id": "ef6cbf6f",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf2a9269",
+   "id": "c30ff664",
    "metadata": {},
    "source": [
     "How many rows and columns are in gdp_df? What are the data types of each column?"
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "73a8caac",
+   "id": "42e10067",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb1efa18",
+   "id": "5aed4758",
    "metadata": {},
    "source": [
     "Drop the Value Footnotes column and rename the remaining three to 'Country', 'Year', and 'GDP_Per_Capita'."
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "04a169a1",
+   "id": "ab269809",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e26398b",
+   "id": "14547da3",
    "metadata": {},
    "source": [
     "How many countries have data for all years? Which countries are missing many years of data? Look at the number of observations per year. What do you notice?\n",
@@ -403,11 +403,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6c5d2f4b",
+   "execution_count": 36,
+   "id": "2ee9ee6c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country               0\n",
+       "Year                  0\n",
+       "GDP_Per_Capita        0\n",
+       "Value Footnotes    7662\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47150104",
+   "metadata": {},
+   "source": [
+    "7662. None are missing any years. "
+   ]
   }
  ],
  "metadata": {
