--- a/notebooks/new_un.ipynb
+++ b/notebooks/new_un.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8379a309",
+   "id": "0bc935c0",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cee68e81",
+   "id": "2ee88955",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ee02916",
+   "id": "e6d41440",
    "metadata": {},
    "source": [
     "Using the pandas read_csv() method, read the GDP dataset into your notebook as a DataFrame called gdp_df. Take a look at the first few and last few rows to familiarize yourself with what is contained in this dataset."
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ecc8b6cc",
+   "id": "4fcc78d6",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58c35544",
+   "id": "51710f7f",
    "metadata": {},
    "source": [
     "How many rows and columns are in gdp_df? What are the data types of each column?"
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "f07315bb",
+   "id": "ff00b7d8",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ceab766",
+   "id": "9f2d771c",
    "metadata": {},
    "source": [
     "Drop the Value Footnotes column and rename the remaining three to 'Country', 'Year', and 'GDP_Per_Capita'."
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a34d9620",
+   "id": "c566656c",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4d9ead9",
+   "id": "0b3c5c95",
    "metadata": {},
    "source": [
     "How many countries have data for all years? Which countries are missing many years of data? Look at the number of observations per year. What do you notice?\n",
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "1bc78bd4",
+   "id": "bb44b2b0",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b373c9e9",
+   "id": "43cbadbb",
    "metadata": {},
    "source": [
     "7662. None are missing any years. "
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fc16ca9",
+   "id": "223f1aac",
    "metadata": {},
    "source": [
     "In this question, you're going to create some plots to show the distribution of GDP per capita for the year 2020. Go to the Python Graph Gallery (https://www.python-graph-gallery.com/) and look at the different types of plots under the Distribution section. Create a histogram, a density plot, a boxplot, and a violin plot. What do you notice when you look at these plots? How do the plots compare and what information can you get out of one type that you can't necessarily get out of the others?"
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "1b1ea62b",
+   "id": "f2cd89bd",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcfe33f2",
+   "id": "56375289",
    "metadata": {},
    "source": [
     "What was the median GDP per capita value in 2020?\n",
@@ -477,29 +477,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "13b4b0fd",
+   "execution_count": 80,
+   "id": "c3adb416",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'statistics' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[63], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m statistics\u001b[38;5;241m.\u001b[39mmedian(df\u001b[38;5;241m.\u001b[39mYear \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m2020\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'statistics' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "17206.97921917204"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "statistics.median(df.Year == 2020)"
+    "df['GDP_Per_Capita'].mean()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "06f012ac",
+   "id": "d90e85be",
    "metadata": {},
    "source": [
     "For this question, you're going to create some visualizations to compare GDP per capita values for the years 1990, 2000, 2010, and 2020. Start by subsetting your data to just these 4 years into a new DataFrame named gdp_decades. Using this, create the following 4 plots:\n",
@@ -514,14 +513,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "602a54a6",
+   "id": "be169b5f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3b37b104",
+   "id": "7ab5b35e",
    "metadata": {},
    "source": [
     "Which country was the first to have a GDP per capita greater than $100,000?"
@@ -530,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "f6d82269",
+   "id": "5e1ac2c7",
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad22e369",
+   "id": "3b142676",
    "metadata": {},
    "source": [
     "Which country had the highest GDP per capita in 2020? Create a plot showing how this country's GDP per capita has changed over the timespan of the dataset."
@@ -951,14 +950,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4eab394a",
+   "id": "46f91ae8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "19bed97f",
+   "id": "83a63b06",
    "metadata": {},
    "source": [
     "Which country had the lowest GDP per capita in 2020? Create a plot showing how this country's GDP per capita has changed over the timespan of the dataset. Bonus question: Is it true in general that coutries had a higher GDP per capita in 2020 than in 1990? Which countries had lower GDP per capita in 2020 than in 1990?"
@@ -967,14 +966,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fee6a4f",
+   "id": "af426991",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "0773cf1e",
+   "id": "14a30441",
    "metadata": {},
    "source": [
     "Read in the internet use dataset into a DataFrame named internet_df. You will likely get errors when doing this. Check the arguments for the read_csv function to find ones that can help correct the errors (https://pandas.pydata.org/docs/reference/api/pandas.read_csv.html) Once you are able to read it in, take per a look at the top and bottom few rows to make sure that it has been read in correctly. Also, check the datatypes of the columns."
@@ -983,14 +982,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6077d702",
+   "id": "a9655102",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "53d5f6f0",
+   "id": "32a974de",
    "metadata": {},
    "source": [
     "Drop the Value Footnotes column and rename the remaining three to 'Country', 'Year', and 'Internet_Users_Pct'."
@@ -999,14 +998,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1143d993",
+   "id": "2653bcd9",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "25f9b02b",
+   "id": "bae2f20f",
    "metadata": {},
    "source": [
     "Look at the number of observations in this dataset per year. What do you notice?"
@@ -1015,14 +1014,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d73dbff2",
+   "id": "fbce4d1d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "cfe70514",
+   "id": "b4c3f069",
    "metadata": {},
    "source": [
     "What is the first year to have a non-zero internet users percentage value?\n",
@@ -1032,14 +1031,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2daa035d",
+   "id": "0011cade",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "99497cc1",
+   "id": "677bcbf6",
    "metadata": {},
    "source": [
     "How does the distribution of internet users percent differ for 2000 and 2014?\n",
@@ -1049,14 +1048,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d135bca9",
+   "id": "0e3d94c5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "0992236e",
+   "id": "e3daa105",
    "metadata": {},
    "source": [
     "For how many countries was the percentage of internet users below 5% in 2014?\n",
@@ -1066,14 +1065,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "499256db",
+   "id": "c779569c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "17031399",
+   "id": "0ffde11c",
    "metadata": {},
    "source": [
     "Merge the two DataFrames to one. Do this in a way that keeps all rows from each of the two DataFrames. Call the new DataFrame gdp_and_internet_use. Look at the first and last few rows to confirm that it merged correctly."
@@ -1082,14 +1081,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fafa8f61",
+   "id": "5c6c9ba5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "55e708c0",
+   "id": "0c32a753",
    "metadata": {},
    "source": [
     "Find the three countries with the highest internet users percentage in 2014. Use a seaborn FacetGrid (https://seaborn.pydata.org/generated/seaborn.FacetGrid.html) to compare how the GDP per capita has changed over time for these three countries. What do you notice?"
@@ -1098,14 +1097,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2b7a702",
+   "id": "d7cace53",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a8ea2631",
+   "id": "f5aa9696",
    "metadata": {},
    "source": [
     "Subset gdp_and_internet_use to just the year 2014. Save this as a new dataframe named gdp_and_internet_use_2014.\n",
@@ -1115,14 +1114,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "779d72f8",
+   "id": "f1e3e1b8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "21f15e60",
+   "id": "7c81d7aa",
    "metadata": {},
    "source": [
     "Create a plot which compares Internet Users Percentage and GDP per Capita for the year 2014. What do you notice from this plot? If you see any unusual points, investigate them.\n",
@@ -1132,15 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c2255a0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd054d1c",
+   "id": "1ef12094",
    "metadata": {},
    "outputs": [],
    "source": []
